Fixed the spacing issues with the button groups

--- a/src/components/Filters/components/ConnectedFilterControl/ConnectedFilterControl.scss
+++ b/src/components/Filters/components/ConnectedFilterControl/ConnectedFilterControl.scss
@@ -57,8 +57,9 @@ $stacking-order: (
 }
 
 .newDesignLanguage {
-  .CenterContainer {
-    margin-right: spacing(tight);
+  .CenterContainer + .RightContainer,
+  .CenterContainer + .MoreFiltersButtonContainer {
+    margin-left: spacing(extra-tight) / 2;
   }
 }
 
